edit readme file content

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "table-assignment hunt-digital-media",
+  "name": "data-table-assignment hunt-digital-media",
   "private": true,
   "author":"Anish Verma",
   "version": "0.0.0",
